test/conformance/chainsaw/verifyImages/clusterpolicy/standard/configmap-context-lookup/chainsaw-step-01-apply-2.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  annotations:
    kyverno.io/kubernetes-version: "1.23"
    kyverno.io/kyverno-version: 1.7.2
    policies.kyverno.io/category: Sample
    policies.kyverno.io/description: There may be multiple keys used to sign images
      based on the parties involved in the creation process. This image verification
      policy requires the named image be signed by two separate keys. It will search
      for a global "production" key in a ConfigMap called `key` in the `default` Namespace
      and also a Namespace key in the same ConfigMap.
    policies.kyverno.io/minversion: 1.7.0
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/title: Verify Image with Multiple Keys
  name: verify-image-with-multi-keys
spec:
  background: true
  rules:
  - context:
    - configMap:
        name: keys
        namespace: default
      name: keys
    match:
      any:
      - resources:
          kinds:
          - Pod
    name: check-image-with-two-keys
    verifyImages:
    - image: '*'
      key: '{{ keys.data.org }}'
      validationFailureAction: Enforce
